@@ -13,10 +13,12 @@ import org.restlet.test.jaxrs.services.path.IllegalPathService2;
 
 public class JaxRsRouterTest extends TestCase {
 
+    @Override
     protected void setUp() throws Exception {
         super.setUp();
     }
 
+    @Override
     protected void tearDown() throws Exception {
         super.tearDown();
     }
